--- a/html-basic/index.html
+++ b/html-basic/index.html
@@ -41,8 +41,8 @@
     <h2>学习科目</h2>
     <p>纽臂科学院本着兼容并蓄的原则，课题涉及一些科技领域。欢迎有才智、态度专注的研究人员参加，也欢迎符合我们价值观的朋友加入。我们最感兴趣的课题如下（按优先度排序）：</p>
 <ol>
-    <li>把水（H2O）转变为酒的方法，以及<em>白藜芦醇（C14H12O3）</em>对健康的帮助作用。</li>
-    <li>测量室温 30°C（86°F）时，观众人数呈指数级增加对放克贝斯手表演的影响（3 × 103 > 3 × 104 效应）。</li>
+    <li>把水（H<sub>2</sub>O）转变为酒的方法，以及<em>白藜芦醇</em>（C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>）对健康的帮助作用。</li>
+    <li>测量室温 30°C（86°F）时，观众人数呈指数级增加对放克贝斯手表演的影响（3 × 10<sup> 3 </sup>× 10<sup>4</sup> 效应）。</li>
     <li>使用 HTML 和 CSS 构建乐谱。</li>
 </ol>
     
